# pollux

./: README.md  pyproject.toml
chrome-extension/: README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js  sidebar.css  sidebar.html  sidebar.js  simple-test.html  styles.css  test.html
datasets/blog_posts/: data-00000-of-00001.arrow  state.json
datasets/docs/: data-00000-of-00001.arrow  dataset_info.json  state.json
datasets/duncanbench/: comparison.json  qs.json  results_20250405_221242.json  results_20250405_222111.json  results_anthropic_claude-3.5-sonnet.json  results_google_gemma-7b.json  (+1 more)
duncan-docs/: All-Duncan-Blog-Comments.csv  Blog-Post-10_Prisons-compared.txt  Blog-Post-11_NATO-ascendant.txt  Blog-Post-12_Innovative-Externality-Inclusion.txt  Blog-Post-12_Tsunami-invariant.txt  Blog-Post-13_Advantage-diminishing.txt  Blog-Post-14_Term-time.txt  Blog-Post-15_A-benefit-greater-yet.txt  Blog-Post-16_A-utopia-suffocated-by-smog.txt  Blog-Post-17_A-slow-tsunami.txt  Blog-Post-18_Compensating-Compassion.txt  Blog-Post-1_Not-the-Nightmare-Scenario  Blog-Post-2_How-much-economic-growth-from-AI.txt  Blog-Post-3_The-end-times-portfolio-is-long.txt  Blog-Post-4_Thames-into-Tyburn.txt  Blog-Post-5_Refillable-planet.txt  Blog-Post-6_A-New-Atlantis.txt  Blog-Post-7_Insuring-Progress.txt  Blog-Post-8_Assessing-Altruism.txt  Blog-Post-9_Paying-for-Peace.txt
scripts/: api_test.py  bench.py  datagen_docs.py  datagen_qa_pairs.py  eval.py  generate_fake_data.py  inference_for_rudolf.py  sft_blog_posts.py
src/: __init__.py
(+8 files in other folders)
