[project]
name = "pollox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "debugpy>=1.8.13",
    "jsonlines>=4.0.0",
    "openai>=1.70.0",
    "pip>=25.0.1",
    "pydantic-settings>=2.8.1",
    "torch>=2.6.0",
    "python-dotenv>=1.1.0",
    "transformers>=4.50.3",
    "peft>=0.15.1",
    "vllm>=0.8.2",
    "gradio>=5.23.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
